# Multi-Agent-Interview-Panel

./: .gitignore  MCP Toolbox README.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  tools.yaml
backend/app/: config.py  main.py
backend/app/graph/: __init__.py  builder.py  evaluator.py  interviewer.py  prompts.py  supervisor.py  voice_config.py
backend/app/graph/agents/: __init__.py  behavioral_agent.py  hr_agent.py  synthesizer.py  technical_agent.py
backend/app/models/: database.py  schemas.py  state.py
backend/app/routes/: interview.py  scorecard.py  sessions.py  transcribe.py
backend/app/services/: llm_provider.py  provider_router.py  resume_context.py  resume_parser.py  stt_service.py  tts_service.py  turn_service.py
backend/tests/: test_provider_router.py  test_resume_context.py  test_stt_service.py  test_supervisor.py  test_tts_service.py  test_turn_route.py
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/new/: page.module.css  page.tsx
frontend/src/app/session/[id]/: page.module.css  page.tsx
frontend/src/app/session/[id]/complete/: page.module.css  page.tsx
frontend/src/app/session/[id]/scorecard/: page.module.css  page.tsx
frontend/src/hooks/: useAudioPlayer.ts  useSSE.ts  useVoiceRecorder.ts
frontend/src/lib/: types.ts
frontend/stitch_exports/: README.md  design-system-06762aa8a18340c9a55b113c149206a3.md  design-system-a873271c1c524b5bbb2309132b34922c.md
